// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders without amountComments 1`] = `
<div>
  <CommentsHeader
    amountComments={112499}
  />
  <AddComments />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Comments renders without props 1`] = `
<div>
  <CommentsHeader />
  <AddComments />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
